<?xml version="1.0"?>
<package>
  <name>fusion_detector</name>
  <version>1.0.0</version>
  <description>The fusion_detector package</description>
  <maintainer email="heng.zhang@miivii.com"></maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>autoware_config_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensors_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>jsk_recognition_utils</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>image_geometry</build_depend>

  <build_depend>visualization_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>autoware_msgs</run_depend>
  <run_depend>autoware_config_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensors_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>jsk_recognition_utils</run_depend>
  <run_depend>jsk_topic_tools</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_geometry</run_depend>

  <run_depend>visualization_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
